Spark repl preparations